# OpenCDT

./: README.md  pyproject.toml
.github/config/: allowed_domains.json
.github/scripts/: generate_scale.py
.github/workflows/: ci.yml  generate-scale.yml
demo/: system_prompt.txt
opencdt/: models.py  scale_store.py  server.py
scales/: 4ts_score_for_heparin_induced_thrombocytopenia.json  acute_gout_diagnosis_rule.json  alvarado_score.json  apgar_score.json  centor_score_modified_mcisaac.json  cha2ds2_vasc.json  child_pugh_score.json  curb_65.json  geneva_score_revised.json  glasgow_coma_scale.json  has_bled.json  heart_score.json  news2.json  pediatric_appendicitis_score.json  pediatric_glasgow_coma_scale.json  qsofa.json  stone_score.json  stop_bang.json  wells_criteria_for_pulmonary_embolism.json  wells_dvt.json
tests/: conftest.py  test_models.py  test_scale_store.py  test_scales_validation.py  test_server.py
